@@ -17,4 +17,4 @@ Bug Report doesn't work
 # End of transcript or log.
 """]]
 
-[[fixed]] --[[Joey]]
+[[fixed|done]] --[[Joey]]
