@@ -23,6 +23,7 @@ git-annex (5.20140307) UNRELEASED; urgency=medium
   * vicfg: Allows editing preferred content expressions for groups.
   * groupwanted can be used in preferred content expressions.
   * metadata: Add --get
+  * metadata: Support --key option (and some other ones like --all)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 06 Mar 2014 16:17:01 -0400
 
